<resources>
    <string name="app_name">TRB1</string>
    <string name="register_event">Cadastrar Evento</string>
    <string name="register_participant">Cadastrar Participante</string>
    <string name="participant_list">Participantes</string>
    <string name="event_list">Eventos</string>
    <string name="register_item">Cadastrar</string>
    <string name="participant_details_title">Dados do Participante</string>
    <string name="event_details_title">Dados do Evento</string>
    <string name="name_lbl">Nome</string>
    <string name="title_lbl">Título</string>
    <string name="participant_name_ph"><![CDATA[<Nome Participante>]]></string>
    <string name="event_name_ph"><![CDATA[<Nome do Evento>]]></string>
    <string name="email_lbl">E-mail</string>
    <string name="participant_mail_ph"><![CDATA[<E-mail Participante>]]></string>
    <string name="id_lbl">CPF</string>
    <string name="participant_id_ph"><![CDATA[<CPF Participante>]]></string>
    <string name="event_action">Inscrever em Evento</string>
    <string name="participant_edit">Editar Participante</string>
    <string name="day_lbl">Dia</string>
    <string name="day_ph"><![CDATA[<Dia>]]></string>
    <string name="hour_lbl">Hora</string>
    <string name="hour_ph"><![CDATA[<Hora>]]></string>
    <string name="participant_action">Adicionar Participante</string>
    <string name="event_facilitator">Facilitador</string>
    <string name="event_facilitator_ph"><![CDATA[<Nome do Facilitador>]]></string>
    <string name="event_description">Descrição</string>
    <string name="event_description_ph"><![CDATA[<Coloque uma descrição sucinta do evento>]]></string>
    <string name="add_participant_action">Adicionar Participante</string>
    <string name="name_hint">Preencha com seu nome completo</string>
    <string name="edit_participant_title">Editar Dados do Participante</string>
    <string name="subscribe_on_event_title">Inscreva o participante em um evento</string>
    <string name="save_modifications_action">Salvar mudanças</string>
    <string name="edit_event_title">Editar Dados do Evento</string>
    <string name="select_to_register">Selecione o que deseja cadastrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
